2007-07-08  Stefan Kost  <ensonic@users.sf.net>

	* src/BuzzMachineLoader.dll:
	  Update bridge library (removed -1 from again setNumTracks(tracks)).

2007-06-25  Stefan Kost  <ensonic@users.sf.net>

	* README:
	* dllwrapper1/wine/module.c: (MODULE_FindModule), (MODULE_InitDll),
	(LoadLibraryExA), (dump_component), (report_func),
	(report_func_ret):
	* dllwrapper1/wine/win32.c: (expLoadCursorA), (expSetLocalTime),
	(expGetSystemTime), (expSystemTimeToFileTime),
	(expLocalFileTimeToFileTime), (expSetFileTime), (expCreateFileA),
	(expCreateFileW), (expCreatePipe), (expLockFile), (expUnlockFile),
	(expGetNumberOfConsoleInputEvents), (expPeekConsoleInputA),
	(expReadConsoleInputA), (expPeekNamedPipe),
	(expGetFileInformationByHandle), (expWriteConsoleA),
	(expSetEndOfFile), (add_stub), (LookupExternal):
	  More functions wrapped.
	* src/BuzzMachineLoader.dll:
	  Better logging capabillities. Emulate API for buzz<1.2 machines

2007-05-13  Stefan Kost  <ensonic@users.sf.net>

	* NEWS:
	* README:
	* TODO:
	* configure.ac:
	* testmachine.sh:
	* tests/bt-cfg.sh.in:
	* tests/testmachine.sh:
	  Move test script to tests dir and add cfg. Add examples abou how to
	  scan for issues.

	* dllwrapper1/wine/pe_image.c: (dump_exports),
	(PE_FindExportedFunction), (fixup_imports), (calc_vma_size),
	(do_relocations), (PE_LoadImage), (PE_CreateModule),
	(PE_LoadLibraryExA), (PE_InitDLL), (_fixup_address):
	  Fix logging

2007-05-12  Stefan Kost  <ensonic@users.sf.net>

	* src/BuzzMachineLoader.dll:
	* src/bml.c: (bml_logger), (bml_setup):
	  Add log handler to savely redirect BuzzMachineLoader to the bml side.

2007-05-02  Stefan Kost  <ensonic@users.sf.net>

	* ChangeLog:
	  Released

=== release 0.2.0 ===

2007-05-02  Stefan Kost  <ensonic@users.sf.net>

	* NEWS:
	* TODO:
	* configure.ac:
	  Releasing

2007-04-19  Stefan Kost  <ensonic@users.sf.net>

	* TODO:
	* dllwrapper1/wine/win32.c: (dbgprintf),
	(expWaitForMultipleObjects), (expCreateMutexA),